
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int EXIT_SUCCESS ;
 char* NO ;
 char* WH ;
 char* YE ;
 int _exit (int ) ;
 int fprintf (int ,char*,char*,char*,...) ;
 int stderr ;

void
banner(void)
{
        fprintf(stderr, "\n%s[-] %sSUN Solaris SPARC / x86 Local Socket Hijack Exploit\n", YE, NO);
        fprintf(stderr, "%s[-] %sKernel issue allows a bind on an already bound socket\n", YE, NO);
        fprintf(stderr, "%s[-] %sallowing a malicious user to impersonate a service that\n", YE, NO);
        fprintf(stderr, "%s[-] %sis already running on a port greater than 1024, making\n", YE, NO);
        fprintf(stderr, "%s[-] %sservice-in-the-middle attacks a trivial task to perform.\n", YE, NO);
        fprintf(stderr, "%s[-] %sDeveloped by c0ntex || c0ntexb@gmail.com%s\n\n", YE, WH, NO);

        _exit(EXIT_SUCCESS);
}
